# faceforge

./: .gitignore  README.html  README.md  RELEASE_NOTES.html  RELEASE_NOTES.md  _config.yml  faceforge.code-workspace
.github/: copilot-instructions.md
core/: README.html  README.md  pyinstaller.spec  pyproject.toml
core/src/faceforge_core/: __init__.py  __main__.py  app.py  auth.py  config.py  home.py  ports.py  seaweedfs.py
core/src/faceforge_core/api/: __init__.py  models.py
core/src/faceforge_core/api/v1/: __init__.py  admin_field_defs.py  assets.py  descriptors.py  entities.py  jobs.py  plugins.py  relationships.py  router.py
core/src/faceforge_core/db/: __init__.py  assets.py  descriptors.py  entities.py  field_defs.py  ids.py  jobs.py  migrate.py  migrations.py  plugins.py  relationships.py
core/src/faceforge_core/ingest/: __init__.py  exiftool.py
core/src/faceforge_core/internal/: __init__.py  bootstrap_db.py  seaweedfs_cli.py
core/src/faceforge_core/jobs/: __init__.py  bulk_import.py  dispatcher.py
core/src/faceforge_core/plugins/: __init__.py  discovery.py
core/src/faceforge_core/storage/: __init__.py  filesystem.py  manager.py  s3.py
core/src/faceforge_core/ui/: __init__.py  router.py
core/src/faceforge_core/ui/static/: app.css  app.js
core/src/faceforge_core/ui/templates/: base.html  entities_list.html  entity_detail.html  job_detail.html  jobs_list.html  login.html  plugins.html
core/tests/: test_assets_v1.py  test_auth_and_v1.py  test_config.py  test_db_ids.py  test_db_migrations.py  test_entities.py  test_exiftool_skip.py  test_field_defs_and_descriptors_v1.py  test_healthz.py  test_home_and_layout.py  test_jobs_v1.py  test_plugins_v1.py  test_ports.py  test_relationships_v1.py  test_ui_mvp.py
desktop/: README.html  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: default.json
desktop/src-tauri/resources/tools/: README.txt
desktop/src-tauri/src/: main.rs  orchestrator.rs  ports.rs  settings.rs
docs/: FaceForge - Dev Guide - Core.html  FaceForge - Dev Guide - Core.md  FaceForge - Dev Guide - Desktop.html  FaceForge - Dev Guide - Desktop.md  FaceForge - Dev Guide - Project Design Specification.html  FaceForge - Dev Guide - Release Notes.html  FaceForge - Dev Guide - Release Notes.md  FaceForge - Dev Guide - Scripts.html  FaceForge - Dev Guide - Scripts.md  FaceForge - Readme.html  (+11 more)
(+24 files in other folders)
