[project]
name = "faceforge-core"
version = "0.1.8"
description = "FaceForge Core API service (scaffolding)"
readme = "../docs/FaceForge - Dev Guide - Core.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "FaceForge contributors" }]
dependencies = [
  "fastapi>=0.110",
  "boto3>=1.34",
  "jinja2>=3.1",
  "jsonschema>=4.22",
  "python-multipart>=0.0.9",
  "tzdata>=2024.1",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
