[package]
name = "faceforge_desktop"
version = "0.1.0"
description = "FaceForge Desktop (Tauri orchestrator)"
authors = ["FaceForge"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
portpicker = "0.1"
rand = "0.8"
base64 = "0.22"
rfd = "0.16"

anyhow = "1"

[dependencies.windows]
version = "0.54"
features = ["Win32_Foundation"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
